--- a/lessons/01_welcome_bme3053c.ipynb
+++ b/lessons/01_welcome_bme3053c.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/carolinahorey/bme3053c/blob/main/lessons/01_welcome_bme3053c.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "zxMSBUaZoKCY"
       },
       "source": [
@@ -395,13 +405,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "9iGzR9dZl3cT"
       },
       "outputs": [],
       "source": [
-        "2x='3"
+        "x= '3'"
       ]
     },
     {
@@ -441,7 +451,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3.9.7 64-bit",
