--- a/lessons-solved/02_python_basics_part_1_bme3053c.ipynb
+++ b/lessons-solved/02_python_basics_part_1_bme3053c.ipynb
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "_wSGRYfR0r-4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
         },
         "outputId": "18d2d729-dffc-410c-fdc3-80d0215d4d49"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,12 +846,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "solve_eq = (19-4**3)/5\n",
+        "print(solve_eq)\n",
+        "\n",
+        "#def solve_eq():\n",
+        "  #return (19-4**3)/5\n",
+        "  #result=solve_eq()\n",
+        "  #print(result)"
+      ],
       "metadata": {
-        "id": "qP2vIoMQzhMh"
+        "id": "qP2vIoMQzhMh",
+        "outputId": "7538b410-523e-4508-dcc4-ccde0e1c9007",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-9.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -916,8 +936,8 @@
     {
       "cell_type": "code",
       "source": [
-        "fav_animal_str=\"I love Wasps!\"\n",
-        "\n",
+        "fav_animal_str='I love Wasps!'\n",
+        "fav_animal_str= fav_animal_str.replace('Wasps','Dogs')\n",
         "print(fav_animal_str)"
       ],
       "metadata": {
@@ -925,15 +945,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "98046c8c-799a-439a-ae2e-4de34408b1d1"
+        "outputId": "e0a4f4de-6a4d-488e-d62f-f2f24ecd6cc0"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "I love Wasps!\n"
+            "I love Dogs!\n"
           ]
         }
       ]
@@ -1033,12 +1053,43 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "input_age = input(\"Please enter your age: \")\n",
+        "def check_in_high_school(age_str):\n",
+        "  try:\n",
+        "    age = int(age_str)\n",
+        "  except:\n",
+        "    print(\"The provided age isn't valid\")\n",
+        "    #return will exit the function at this point, so everything under return will not be run\n",
+        "    return\n",
+        "\n",
+        "  if age < 14:\n",
+        "    print('too young')\n",
+        "  elif 14 <= age <= 18:\n",
+        "    print('likely in high school')\n",
+        "  else:\n",
+        "    print('too old')\n",
+        "\n",
+        "check_in_high_school(input_age)"
+      ],
       "metadata": {
-        "id": "-KlifLrWlzmh"
+        "id": "-KlifLrWlzmh",
+        "outputId": "9600aa92-d3be-4022-be75-6b19495d9c9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter your age: fwofew\n",
+            "The provided age isn't valid\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1056,7 +1107,7 @@
       "source": [
         "#### ✏️**Exercise**\n",
         "\n",
-        "You are writing a program that determines whether a student qualifies for an honors program based on their grades and extracurricular activities. The criteria for qualification are as follows:\n",
+        "You are writing a function that determines whether a student qualifies for an honors program based on their grades and extracurricular activities. The criteria for qualification are as follows:\n",
         "\n",
         "* The student must have an average grade of at least 85, **and**\n",
         "* The student must either:\n",
@@ -1074,13 +1125,33 @@
       "source": [
         "# Example values\n",
         "average_grade = 86\n",
-        "num_activities = 3"
+        "num_activities = 3\n",
+        "\n",
+        "def check_qualification(grade, activities):\n",
+        "  if grade >= 85 and (activities >= 2 or grade >= 90):\n",
+        "    print('qualifies')\n",
+        "  else:\n",
+        "    print('does not qualify')\n",
+        "\n",
+        "check_qualification(average_grade, num_activities)"
       ],
       "metadata": {
-        "id": "08ZofhlsXQ-B"
+        "id": "08ZofhlsXQ-B",
+        "outputId": "5507a352-a862-401e-9d89-08639683015f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "qualifies\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1144,10 +1215,25 @@
         "    print(name)"
       ],
       "metadata": {
-        "id": "ytrs0Tx22CSw"
+        "id": "ytrs0Tx22CSw",
+        "outputId": "90ad6af1-b22e-4e38-9c05-d447bf459aad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "jack\n",
+            "jill\n",
+            "joe\n",
+            "suzan\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1166,13 +1252,33 @@
     {
       "cell_type": "code",
       "source": [
-        "example_input_array=[5,8,2,7,0]"
+        "example_input_array=[5,8,2,7,0]\n",
+        "#create an empty array to input new numbers\n",
+        "double_array=[]\n",
+        "for num in example_input_array:\n",
+        "  new_num = 2*num\n",
+        "  #append puts these new numbers from the first array into the new one\n",
+        "  double_array.append(new_num)\n",
+        "\n",
+        "print(double_array)"
       ],
       "metadata": {
-        "id": "0sclM9v0nuFd"
+        "id": "0sclM9v0nuFd",
+        "outputId": "9e661fe3-9409-4bdc-f2f8-77e77fa281aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 16, 4, 14, 0]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
