--- a/lessons-solved/02_python_basics_part_1_bme3053c.ipynb
+++ b/lessons-solved/02_python_basics_part_1_bme3053c.ipynb
@@ -27,7 +27,7 @@
         "<center><h2>Lesson 02</h2></center>\n",
         "\n",
         "\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/carolinahorey/bme3053c/blob/main/lessons-solved/02_python_basics_part_1_bme3053c.ipynb)"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/snsie/bme3053c/blob/main/lessons-solved/02_python_basics_part_1_bme3053c.ipynb)"
       ]
     },
     {
@@ -159,7 +159,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "18d2d729-dffc-410c-fdc3-80d0215d4d49"
+        "outputId": "8d7e7206-8a7b-4339-c51a-09679d210b0d"
       },
       "execution_count": null,
       "outputs": [
@@ -847,28 +847,26 @@
     {
       "cell_type": "code",
       "source": [
-        "solve_eq = (19-4**3)/5\n",
-        "print(solve_eq)\n",
+        "def solve_eq():\n",
+        "  return (19-4**3)/5\n",
         "\n",
-        "#def solve_eq():\n",
-        "  #return (19-4**3)/5\n",
-        "  #result=solve_eq()\n",
-        "  #print(result)"
+        "result=solve_eq()\n",
+        "print(result)"
       ],
       "metadata": {
         "id": "qP2vIoMQzhMh",
-        "outputId": "7538b410-523e-4508-dcc4-ccde0e1c9007",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f1e8bfc4-14c4-4e48-d58e-e31500e97d01"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "-9.0\n"
+            "None\n"
           ]
         }
       ]
@@ -905,7 +903,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JkSw6MHklHJ4",
-        "outputId": "d5b01120-6042-4fd7-fd0f-fa374117f686"
+        "outputId": "6dfaac50-810f-4f3a-f9b5-f9a5a41b3d6e"
       },
       "execution_count": null,
       "outputs": [
@@ -936,24 +934,24 @@
     {
       "cell_type": "code",
       "source": [
-        "fav_animal_str='I love Wasps!'\n",
-        "fav_animal_str= fav_animal_str.replace('Wasps','Dogs')\n",
-        "print(fav_animal_str)"
+        "fav_animal_str=\"I love Wasps!\"\n",
+        "my_fav_animal_str=fav_animal_str.replace('Wasps','Parrots')\n",
+        "print(my_fav_animal_str)"
       ],
       "metadata": {
         "id": "G-wxNSVU3-bg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e0a4f4de-6a4d-488e-d62f-f2f24ecd6cc0"
+        "outputId": "816ee6bd-2672-4239-c691-0f24191d1ec4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "I love Dogs!\n"
+            "I love Parrots!\n"
           ]
         }
       ]
@@ -1054,39 +1052,40 @@
     {
       "cell_type": "code",
       "source": [
-        "input_age = input(\"Please enter your age: \")\n",
+        "input_age=input(\"Please enter an integer: \")\n",
         "def check_in_high_school(age_str):\n",
+        "\n",
         "  try:\n",
-        "    age = int(age_str)\n",
+        "    age=int(age_str)\n",
         "  except:\n",
         "    print(\"The provided age isn't valid\")\n",
-        "    #return will exit the function at this point, so everything under return will not be run\n",
         "    return\n",
         "\n",
         "  if age < 14:\n",
         "    print('too young')\n",
-        "  elif 14 <= age <= 18:\n",
-        "    print('likely in high school')\n",
+        "  elif age <=18:\n",
+        "    print(\"likely in high school\")\n",
         "  else:\n",
-        "    print('too old')\n",
+        "    print(\"too old\")\n",
         "\n",
-        "check_in_high_school(input_age)"
+        "\n",
+        "check_in_high_school(input_age)\n"
       ],
       "metadata": {
         "id": "-KlifLrWlzmh",
-        "outputId": "9600aa92-d3be-4022-be75-6b19495d9c9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2180bb73-4d89-434e-efa4-0d0523d86032"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Please enter your age: fwofew\n",
-            "The provided age isn't valid\n"
+            "Please enter an integer: 34\n",
+            "too old\n"
           ]
         }
       ]
@@ -1096,7 +1095,7 @@
       "source": [
         "###  Conditions > 2\n",
         "* If more than two conditions are required to be true for some code to run, then parentheses ```()``` should be used to group conditions. For example, ```if condition1 and (condition2 or not condition3):``` enables nuanced decision-making by combining and nesting conditions within a single statement.\n",
-        "* Parentheses are not required if all conditions need to be true (```condition1 and condition2 and condition3```)  or only one condition needs to be true (```condition1 or condition2 or condition3```)\n"
+        "* Parentheses are not required if all conditions need to be true ```if condition1 and condition2 and condition3:```  or only one condition needs to be true ```if condition1 or condition2 or condition3:```\n"
       ],
       "metadata": {
         "id": "91LckqTYe2DW"
@@ -1127,22 +1126,22 @@
         "average_grade = 86\n",
         "num_activities = 3\n",
         "\n",
-        "def check_qualification(grade, activities):\n",
-        "  if grade >= 85 and (activities >= 2 or grade >= 90):\n",
+        "def check_qualification(grade,activities):\n",
+        "  if grade >=85 and (grade>=90 or activities >=2):\n",
         "    print('qualifies')\n",
         "  else:\n",
         "    print('does not qualify')\n",
         "\n",
-        "check_qualification(average_grade, num_activities)"
+        "check_qualification(average_grade,num_activities)"
       ],
       "metadata": {
         "id": "08ZofhlsXQ-B",
-        "outputId": "5507a352-a862-401e-9d89-08639683015f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b47b1184-b509-4e51-d1fb-1e1fbb758f41"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1216,12 +1215,12 @@
       ],
       "metadata": {
         "id": "ytrs0Tx22CSw",
-        "outputId": "90ad6af1-b22e-4e38-9c05-d447bf459aad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e72d3665-4f9c-40c3-b266-59603ec61d02"
       },
-      "execution_count": 32,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1252,24 +1251,29 @@
     {
       "cell_type": "code",
       "source": [
-        "example_input_array=[5,8,2,7,0]\n",
-        "#create an empty array to input new numbers\n",
-        "double_array=[]\n",
-        "for num in example_input_array:\n",
-        "  new_num = 2*num\n",
-        "  #append puts these new numbers from the first array into the new one\n",
-        "  double_array.append(new_num)\n",
+        "example_input_list=[5,8,2,7,0]\n",
         "\n",
-        "print(double_array)"
+        "def list_doubler(in_list):\n",
+        "  #create an empty list for the new values\n",
+        "  output_list=[]\n",
+        "\n",
+        "#for each value in the list, multiply by 2\n",
+        "  for val in in_list:\n",
+        "    output_list.append(val*2)\n",
+        "  return output_list\n",
+        "\n",
+        "#define the empty array as the new values and print it\n",
+        "out_list = list_doubler(example_input_list)\n",
+        "print(out_list)"
       ],
       "metadata": {
         "id": "0sclM9v0nuFd",
-        "outputId": "9e661fe3-9409-4bdc-f2f8-77e77fa281aa",
+        "outputId": "cce24c38-75c0-4d39-869c-1e64a40dfe33",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1310,14 +1314,27 @@
     {
       "cell_type": "code",
       "source": [
-        "for i in range(5):\n",
+        "for i in range(3,6,2):\n",
         "  print(i)"
       ],
       "metadata": {
-        "id": "MnbaavLBrkB1"
+        "id": "MnbaavLBrkB1",
+        "outputId": "699af6bb-c33f-461a-e06f-ee81fe4f15d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1333,7 +1350,38 @@
         "print(list(range(4, 2)),'= range(4, 2)')\n"
       ],
       "metadata": {
-        "id": "7VepGNCAVA0M"
+        "id": "7VepGNCAVA0M",
+        "outputId": "9658536a-3c2f-4e8d-e388-943eafbcf820",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 2, 3, 4] = range(5)\n",
+            "[1, 2, 3, 4] = range(1,5)\n",
+            "[0, 2, 4] = range(0, 5, 2)\n",
+            "[0, 3, 6, 9] = range(0, 10, 3)\n",
+            "[0, -1, -2, -3, -4, -5, -6, -7, -8, -9] = range(0, -10, -1)\n",
+            "[] = range(0)\n",
+            "[] = range(4, 2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list=[3,4,5]\n",
+        "for i in range(len(my_list)):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "52P653sDga-M"
       },
       "execution_count": null,
       "outputs": []
@@ -1501,6 +1549,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
