--- a/lessons-solved/02_python_basics_part_1_bme3053c.ipynb
+++ b/lessons-solved/02_python_basics_part_1_bme3053c.ipynb
@@ -1218,9 +1218,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e72d3665-4f9c-40c3-b266-59603ec61d02"
+        "outputId": "5e391ad6-a63a-452e-f63d-fb2a47b17c05"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1252,28 +1252,25 @@
       "cell_type": "code",
       "source": [
         "example_input_list=[5,8,2,7,0]\n",
-        "\n",
+        "example_input_list2=[3,4]\n",
         "def list_doubler(in_list):\n",
-        "  #create an empty list for the new values\n",
+        "  # example_input_list=[5,5]\n",
         "  output_list=[]\n",
-        "\n",
-        "#for each value in the list, multiply by 2\n",
         "  for val in in_list:\n",
         "    output_list.append(val*2)\n",
         "  return output_list\n",
         "\n",
-        "#define the empty array as the new values and print it\n",
-        "out_list = list_doubler(example_input_list)\n",
+        "out_list=list_doubler(example_input_list)\n",
         "print(out_list)"
       ],
       "metadata": {
         "id": "0sclM9v0nuFd",
-        "outputId": "cce24c38-75c0-4d39-869c-1e64a40dfe33",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f3939ef0-da97-4217-c2a8-a8cf7406d640"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1319,12 +1316,12 @@
       ],
       "metadata": {
         "id": "MnbaavLBrkB1",
-        "outputId": "699af6bb-c33f-461a-e06f-ee81fe4f15d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9b48f36c-3f60-4b80-b6f2-9590fd700711"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1347,16 +1344,17 @@
         "print(list(range(0, 10, 3)),'= range(0, 10, 3)')\n",
         "print(list(range(0, -10, -1)),'= range(0, -10, -1)')\n",
         "print(list(range(0)), '= range(0)')\n",
+        "#The start (4) is higher than the stop (2), so an empty list is output\n",
         "print(list(range(4, 2)),'= range(4, 2)')\n"
       ],
       "metadata": {
         "id": "7VepGNCAVA0M",
-        "outputId": "9658536a-3c2f-4e8d-e388-943eafbcf820",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8191667d-3a87-47fb-c25a-2343f38fc00a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1378,13 +1376,43 @@
       "source": [
         "my_list=[3,4,5]\n",
         "for i in range(len(my_list)):\n",
-        "  print(i)"
+        "  print(my_list[i])\n",
+        "\n",
+        "#Easier way to think of it is to do this:\n",
+        "for i in my_list:\n",
+        "  print(i)\n",
+        "\n",
+        "#Make sure that what you are printing is not out of bounds; (my_list)-1\n",
+        "for i in range(len(my_list)-1):\n",
+        "  print(my_list[i]+my_list[i+1])\n",
+        "\n",
+        "#This will print a specific index in the list\n",
+        "  #print(my_list[i])\n"
       ],
       "metadata": {
-        "id": "52P653sDga-M"
+        "id": "AuN7v8ljgUbR",
+        "outputId": "2e959db1-1ae8-4092-f8cd-b60df7c32cdc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "4\n",
+            "5\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "7\n",
+            "9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1403,13 +1431,47 @@
     {
       "cell_type": "code",
       "source": [
-        "breath_count = [10,8,14,9,10,10,9,11,10,9]\n"
+        "#30-second intervals, so each index is 0.5 minutes\n",
+        "breath_count = [10,8,14,9,10,10,9,11,10,9]\n",
+        "#Go through the line to see how long the pt respiration was >20: 2.5 minutes\n",
+        "\n",
+        "exceed_dur = 0\n",
+        "prev_pair_exceed = False\n",
+        "for i in range(len(breath_count)-1):\n",
+        "  #See if the pair is above 20\n",
+        "  if (breath_count[i]+breath_count[i+1]) > 20:\n",
+        "    if not prev_pair_exceed:\n",
+        "      #The pair is above 20 and the previous pair was not, add 1 minute\n",
+        "      exceed_dur+=1\n",
+        "    else:\n",
+        "      #The pair is above 20, but so was the previous pair, add 0.5 minute\n",
+        "      exceed_dur+=0.5\n",
+        "    #Since the breaths above were counted, we must consider the \"previous pair\" to now be true\n",
+        "    prev_pair_exceed = True\n",
+        "  #Here the breath count was not above 20, so the \"previous pair\" was not counted and is false\n",
+        "  else:\n",
+        "      prev_pair_exceed = False\n",
+        "\n",
+        "#Print the final count\n",
+        "print(exceed_dur)"
       ],
       "metadata": {
-        "id": "nEpeifrYqqtv"
+        "id": "nEpeifrYqqtv",
+        "outputId": "82869e12-d7a1-45c0-facc-34d5d3ce3554",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1437,18 +1499,34 @@
       "source": [
         "for i in range(8):\n",
         "  if i < 2:\n",
+        "    #back to the beginning of the loop\n",
         "    continue\n",
         "  if i < 4:\n",
         "    print('i =', i)\n",
         "    continue\n",
+        "  #cut the loop\n",
         "  break\n",
         "print('final i =',i)"
       ],
       "metadata": {
-        "id": "fBoeMcwTzzxa"
+        "id": "fBoeMcwTzzxa",
+        "outputId": "36bedb48-fdce-4ed5-b8f2-4d09d5e484f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "i = 2\n",
+            "i = 3\n",
+            "final i = 4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1468,13 +1546,42 @@
     {
       "cell_type": "code",
       "source": [
-        "ecg_values = [120, 118, -10, 130, 210, 30, 25, 75, 180, 45, 220]\n"
+        "ecg_values = [120, 118, -10, 130, 210, 30, 25, 75, 180, 45, 220]\n",
+        "\n",
+        "for ecg_value in ecg_values:\n",
+        "  if ecg_value < 0 or ecg_value > 200:\n",
+        "    #ignore these values\n",
+        "    continue\n",
+        "  if ecg_value < 30:\n",
+        "    print('problem value:',ecg_value)\n",
+        "    print('critical anomaly detected')\n",
+        "    #stop the program\n",
+        "    break\n",
+        "  else:\n",
+        "    print('ecg value:',ecg_value)"
       ],
       "metadata": {
-        "id": "W8kryIs90YUT"
+        "id": "W8kryIs90YUT",
+        "outputId": "66c18599-2c81-43ff-b8ae-999fc22f9d5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ecg value: 120\n",
+            "ecg value: 118\n",
+            "ecg value: 130\n",
+            "ecg value: 30\n",
+            "problem value: 25\n",
+            "critical anomaly detected\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1501,15 +1608,33 @@
         "counter = 0\n",
         "while counter < 5:\n",
         "    print(counter)\n",
+        "    #add 1 to the count\n",
         "    counter += 1\n",
         "\n",
         "print('final counter',counter)"
       ],
       "metadata": {
-        "id": "3GdFBntylvIF"
+        "id": "3GdFBntylvIF",
+        "outputId": "53821cda-c77e-4947-9f80-1ef0cbcf3884",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "final counter 5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1537,7 +1662,10 @@
       "source": [
         "import random\n",
         "\n",
-        "random.seed(10)\n"
+        "random.seed(10)\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "2xrn8Z1GIhRD"
@@ -1549,7 +1677,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
