--- a/lessons-solved/02_python_basics_part_1_bme3053c.ipynb
+++ b/lessons-solved/02_python_basics_part_1_bme3053c.ipynb
@@ -1344,7 +1344,6 @@
         "print(list(range(0, 10, 3)),'= range(0, 10, 3)')\n",
         "print(list(range(0, -10, -1)),'= range(0, -10, -1)')\n",
         "print(list(range(0)), '= range(0)')\n",
-        "#The start (4) is higher than the stop (2), so an empty list is output\n",
         "print(list(range(4, 2)),'= range(4, 2)')\n"
       ],
       "metadata": {
@@ -1375,44 +1374,13 @@
       "cell_type": "code",
       "source": [
         "my_list=[3,4,5]\n",
-        "for i in range(len(my_list)):\n",
-        "  print(my_list[i])\n",
-        "\n",
-        "#Easier way to think of it is to do this:\n",
-        "for i in my_list:\n",
-        "  print(i)\n",
-        "\n",
-        "#Make sure that what you are printing is not out of bounds; (my_list)-1\n",
-        "for i in range(len(my_list)-1):\n",
-        "  print(my_list[i]+my_list[i+1])\n",
-        "\n",
-        "#This will print a specific index in the list\n",
-        "  #print(my_list[i])\n"
+        "for i in range(len(my_list)):\n"
       ],
       "metadata": {
-        "id": "AuN7v8ljgUbR",
-        "outputId": "2e959db1-1ae8-4092-f8cd-b60df7c32cdc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "AuN7v8ljgUbR"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3\n",
-            "4\n",
-            "5\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "7\n",
-            "9\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1431,38 +1399,35 @@
     {
       "cell_type": "code",
       "source": [
-        "#30-second intervals, so each index is 0.5 minutes\n",
         "breath_count = [10,8,14,9,10,10,9,11,10,9]\n",
-        "#Go through the line to see how long the pt respiration was >20: 2.5 minutes\n",
+        "#each index is 30 seconds, so 2 indexs = 1 minute\n",
         "\n",
-        "exceed_dur = 0\n",
-        "prev_pair_exceed = False\n",
+        "exceed_dur=0\n",
+        "prev_pair_exceed=False\n",
+        "\n",
         "for i in range(len(breath_count)-1):\n",
-        "  #See if the pair is above 20\n",
-        "  if (breath_count[i]+breath_count[i+1]) > 20:\n",
+        "  if(breath_count[i] + breath_count[i+1] > 20):\n",
         "    if not prev_pair_exceed:\n",
-        "      #The pair is above 20 and the previous pair was not, add 1 minute\n",
         "      exceed_dur+=1\n",
         "    else:\n",
-        "      #The pair is above 20, but so was the previous pair, add 0.5 minute\n",
+        "      #if the previous pair was above 20, the next number above 20 will add 30 seconds to the count\n",
         "      exceed_dur+=0.5\n",
-        "    #Since the breaths above were counted, we must consider the \"previous pair\" to now be true\n",
-        "    prev_pair_exceed = True\n",
-        "  #Here the breath count was not above 20, so the \"previous pair\" was not counted and is false\n",
-        "  else:\n",
-        "      prev_pair_exceed = False\n",
         "\n",
-        "#Print the final count\n",
+        "    prev_pair_exceed=True\n",
+        "  else:\n",
+        "    #if the breath_count was not 20, reset previous\n",
+        "    prev_pair_exceed=False\n",
+        "\n",
         "print(exceed_dur)"
       ],
       "metadata": {
         "id": "nEpeifrYqqtv",
-        "outputId": "82869e12-d7a1-45c0-facc-34d5d3ce3554",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9fc3c958-8375-4098-f9ed-63125e0078c9"
       },
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -1499,34 +1464,18 @@
       "source": [
         "for i in range(8):\n",
         "  if i < 2:\n",
-        "    #back to the beginning of the loop\n",
         "    continue\n",
         "  if i < 4:\n",
         "    print('i =', i)\n",
         "    continue\n",
-        "  #cut the loop\n",
         "  break\n",
         "print('final i =',i)"
       ],
       "metadata": {
-        "id": "fBoeMcwTzzxa",
-        "outputId": "36bedb48-fdce-4ed5-b8f2-4d09d5e484f5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "fBoeMcwTzzxa"
       },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "i = 2\n",
-            "i = 3\n",
-            "final i = 4\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1548,26 +1497,26 @@
       "source": [
         "ecg_values = [120, 118, -10, 130, 210, 30, 25, 75, 180, 45, 220]\n",
         "\n",
-        "for ecg_value in ecg_values:\n",
-        "  if ecg_value < 0 or ecg_value > 200:\n",
-        "    #ignore these values\n",
-        "    continue\n",
-        "  if ecg_value < 30:\n",
-        "    print('problem value:',ecg_value)\n",
-        "    print('critical anomaly detected')\n",
-        "    #stop the program\n",
-        "    break\n",
+        "for i in range(len(ecg_values)-1):\n",
+        "  #check if the ecg value is within the normal range\n",
+        "  if ecg_values[i] < 200 and ecg_values[i] > 0:\n",
+        "    print('ecg value:',ecg_values[i])\n",
+        "  #if the ecg value is not in this range, it is a noisy value and we will ignore it\n",
         "  else:\n",
-        "    print('ecg value:',ecg_value)"
+        "    continue\n",
+        "  #check if the value is an anomaly and stop the loop if it is\n",
+        "  if ecg_values[i] < 30:\n",
+        "    print('critical anomaly detected',ecg_values[i])\n",
+        "    break"
       ],
       "metadata": {
         "id": "W8kryIs90YUT",
-        "outputId": "66c18599-2c81-43ff-b8ae-999fc22f9d5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "04bf884c-89f2-4d00-a40b-e55fc5b6f88f"
       },
-      "execution_count": 30,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1577,11 +1526,20 @@
             "ecg value: 118\n",
             "ecg value: 130\n",
             "ecg value: 30\n",
-            "problem value: 25\n",
-            "critical anomaly detected\n"
+            "ecg value: 25\n",
+            "critical anomaly detected 25\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "m3lr3LRZahg1"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1608,33 +1566,15 @@
         "counter = 0\n",
         "while counter < 5:\n",
         "    print(counter)\n",
-        "    #add 1 to the count\n",
         "    counter += 1\n",
         "\n",
         "print('final counter',counter)"
       ],
       "metadata": {
-        "id": "3GdFBntylvIF",
-        "outputId": "53821cda-c77e-4947-9f80-1ef0cbcf3884",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "3GdFBntylvIF"
       },
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "final counter 5\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1665,18 +1605,61 @@
         "random.seed(10)\n",
         "\n",
         "\n",
-        "\n"
+        "glucose_level = 200\n",
+        "in_range=False\n",
+        "\n",
+        "while not in_range:\n",
+        "  #creat a random number to decrease the glucose level by\n",
+        "  glucose_decrease=random.randint(5,15)\n",
+        "  glucose_level-=glucose_decrease\n",
+        "  #print our new values each time\n",
+        "  print('glucose_decrease:', glucose_decrease)\n",
+        "  print('glucose_level',glucose_level)\n",
+        "  #once this becomes true it breaks the while loop\n",
+        "  if glucose_level <= 120:\n",
+        "    in_range=True\n",
+        "\n",
+        "print('final glucose level:',glucose_level)\n"
       ],
       "metadata": {
-        "id": "2xrn8Z1GIhRD"
+        "id": "2xrn8Z1GIhRD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "050c3ea4-c8e5-43d6-ad54-236fc836357c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "glucose_decrease: 14\n",
+            "glucose_level 186\n",
+            "glucose_decrease: 5\n",
+            "glucose_level 181\n",
+            "glucose_decrease: 11\n",
+            "glucose_level 170\n",
+            "glucose_decrease: 12\n",
+            "glucose_level 158\n",
+            "glucose_decrease: 14\n",
+            "glucose_level 144\n",
+            "glucose_decrease: 5\n",
+            "glucose_level 139\n",
+            "glucose_decrease: 8\n",
+            "glucose_level 131\n",
+            "glucose_decrease: 12\n",
+            "glucose_level 119\n",
+            "final glucose level: 119\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
